fixed overflow x

--- a/style.css
+++ b/style.css
@@ -584,7 +584,6 @@ display: none;
 }
 
 .aboutMeList{
-  display: flex;
   position: absolute;
 }
 
